--- a/src/base.css
+++ b/src/base.css
@@ -19,6 +19,12 @@ form, label, input, button, select, datalist, optgroup, option, textarea, keygen
 		font-family: inherit;
 	}
 
+a, em, strong, small, s, cite, q, dfn, abbr, data, time, code, var, samp, kbd, sub, sup, i, b, u, mark, ruby, rb, rt,
+	rtc, rp, bdi, bdo, span,
+ins, del {
+	font-size: inherit;
+}
+
 html,
 body {
 	height: 100%;
