--- a/src/select.css
+++ b/src/select.css
@@ -31,7 +31,7 @@
 
 .-select select:focus {
 	outline: none;
-	border-color: hsl(210, 100%, 64%);
+	border-color: $color-success;
 }
 
 p .-select {
